--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <nav class="menu-principal">
+      <ul>
+        <li><a href="index.html">Receita do Dia</a></li>
+        <li><a href="#">Sobre Mim</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
   <main>
     <h1>Arroz de Pato á Moda Antiga</h1>
     <p>Uma Receita clássica portuguesa, perfeita para um almoço de domingo.</p>
