JS agora manipula o DOM e muda o H1

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
   </header>
   <main>
-    <h1>Arroz de Pato á Moda Antiga</h1>
+    <h1 id="titulo-da-receita">Arroz de Pato á Moda Antiga</h1>
     <p>Uma Receita clássica portuguesa, perfeita para um almoço de domingo.</p>
 
     <h2>Ingredientes</h2>
