JS agora manipula o DOM e muda o H1

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </header>
   <main>
     <h1 id="titulo-da-receita">Arroz de Pato á Moda Antiga</h1>
+    <button id="botao-mudar">Clique-me para Mudar o Título!</button>
     <p>Uma Receita clássica portuguesa, perfeita para um almoço de domingo.</p>
 
     <h2>Ingredientes</h2>
